--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginTop="90dp"
             android:layout_marginBottom="30dp"
-            android:onClick="runSearch"
+            android:onClick=""
             android:text="Search" />
 
 
