Set up detail fragment (loaded when list item is clicked); related changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,9 +102,9 @@
 
         <!--Fragment placeholder for the RecyclerView that holds the list of breeds-->
         <FrameLayout
-            android:id="@+id/fragment_placeholder"
+            android:id="@+id/fragment_listPlaceholder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentStart="true">
         </FrameLayout>
 
