If origin field is empty, don't show it

--- a/app/src/main/res/layout/fragment_breeddetail.xml
+++ b/app/src/main/res/layout/fragment_breeddetail.xml
@@ -35,6 +35,7 @@
         android:layout_marginTop="10dp"
         >
         <LinearLayout
+            android:id="@+id/LinearLayout_breedOriginWrapper"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
