--- a/app/src/main/res/layout/fragment_breeddetail.xml
+++ b/app/src/main/res/layout/fragment_breeddetail.xml
@@ -22,7 +22,8 @@
         android:layout_below="@+id/imageView_breedImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
+        android:textSize="28sp"
+        android:textColor="@color/colorPrimary"
         />
 
     <!--The breed details-->
@@ -40,13 +41,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
+                android:paddingBottom="5dp"
                 android:text="Origin"
                 />
             <TextView
@@ -54,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textColor="@color/colorPrimary"
                 />
         </LinearLayout>
         <LinearLayout
@@ -61,13 +64,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
+                android:paddingBottom="5dp"
                 android:text="Weight"
                 />
             <TextView
@@ -75,6 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textColor="@color/colorPrimary"
                 />
         </LinearLayout>
         <LinearLayout
@@ -82,13 +87,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
+                android:paddingBottom="5dp"
                 android:text="Lifespan"
                 />
             <TextView
@@ -96,6 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textColor="@color/colorPrimary"
                 />
         </LinearLayout>
     </LinearLayout>
