--- a/app/src/main/res/layout/listitem_breed.xml
+++ b/app/src/main/res/layout/listitem_breed.xml
@@ -13,8 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:textColor="@color/colorPrimary"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+
         />
 
 </LinearLayout>
