--- a/app/src/main/res/layout/listitem_breed.xml
+++ b/app/src/main/res/layout/listitem_breed.xml
@@ -16,7 +16,8 @@
         android:textColor="@color/colorPrimary"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         />
 
 </LinearLayout>
