Change "powered by" text according to whether we're looking at a dog or a cat

--- a/app/src/main/res/layout/fragment_breeddetail.xml
+++ b/app/src/main/res/layout/fragment_breeddetail.xml
@@ -134,12 +134,12 @@
 
     <!--The API credit-->
     <TextView
+        android:id="@+id/textView_credit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/layout_DetailWrapper"
         android:paddingBottom="15dp"
         android:layout_marginTop="30dp"
-        android:text="Powered by TheDogAPI.com"
         android:textSize="12sp"
         android:textColor="#999"
         android:paddingStart="15dp"
