Account for the API not returning an image

--- a/app/src/main/res/layout/fragment_breeddetail.xml
+++ b/app/src/main/res/layout/fragment_breeddetail.xml
@@ -16,11 +16,13 @@
         android:background="#FFF">
 
         <ProgressBar
+            android:id="@+id/layout_imageLoadingPanel_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true" />
 
         <TextView
+            android:id="@+id/layout_imageLoadingPanel_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
