--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,104 +1,144 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:id="@+id/layout_mainActivity"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         >
 
-        <!-- The label for the species selection -->
+        <!--App "logo"-->
         <TextView
-            android:id="@+id/textView_speciesLabel"
+            android:id="@+id/textView_appName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:text="Species" />
+            android:textSize="46dp"
+            android:fontFamily="@font/wendy_one"
+            android:textColor="#FFF"
+            android:textAlignment="center"
+            android:shadowColor="@color/colorPrimaryText"
+            android:shadowDx="10"
+            android:shadowDy="10"
+            android:shadowRadius="20"
+            android:text="DoggyData" />
 
-        <!-- The species selection -->
-        <Spinner
-            android:id="@+id/spinner_species"
-            android:layout_width="match_parent"
+        <!--Relative layout to group all the search criteria-->
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_speciesLabel"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="6dp"
-            android:layout_marginBottom="30dp" />
+            android:layout_below="@id/textView_appName"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="20dp"
+            android:background="#FFF"
+            >
 
-
-        <!-- The label for the weight field -->
-        <TextView
-            android:id="@+id/textView_weightLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/spinner_species"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:text="Approx. weight (kg)" />
-
-        <!-- The weight -->
-        <EditText
-            android:id="@+id/editText_weight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_weightLabel"
-            android:ems="16"
-            android:inputType="numberDecimal"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="30dp"/>
-
-
-        <!-- The label for the height field -->
-        <TextView
-            android:id="@+id/textView_heightLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/editText_weight"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:text="Approx. height (cm)" />
-
-        <!-- The weight -->
-        <EditText
-            android:id="@+id/editText_height"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_heightLabel"
-            android:ems="16"
-            android:inputType="numberDecimal"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="30dp"/>
-
-
-        <!-- The search button, wrapped in a linear layout to prevent stacking issues -->
-        <LinearLayout
-            android:id="@+id/button_wrapper"
-            android:orientation="horizontal"
-            android:layout_below="@+id/editText_height"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/button_search"
+            <!-- The label for the species selection -->
+            <TextView
+                android:id="@+id/textView_speciesLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:text="Species" />
+
+            <!-- The species selection -->
+            <Spinner
+                android:id="@+id/spinner_species"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_speciesLabel"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginBottom="30dp" />
+
+
+            <!-- The label for the weight field -->
+            <TextView
+                android:id="@+id/textView_weightLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/spinner_species"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:text="Approx. weight (kg)" />
+
+            <!-- The weight -->
+            <EditText
+                android:id="@+id/editText_weight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_weightLabel"
+                android:ems="16"
+                android:inputType="numberDecimal"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginTop="90dp"
-                android:layout_marginBottom="30dp"
-                android:onClick="runSearch"
-                android:text="Search" />
-        </LinearLayout>
+                android:layout_marginBottom="30dp"/>
 
+
+            <!-- The label for the height field -->
+            <TextView
+                android:id="@+id/textView_heightLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editText_weight"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:text="Approx. height (cm)" />
+
+            <!-- The weight -->
+            <EditText
+                android:id="@+id/editText_height"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_heightLabel"
+                android:ems="16"
+                android:inputType="numberDecimal"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="30dp"/>
+
+
+            <!-- The search button, wrapped in a linear layout to prevent stacking issues -->
+            <LinearLayout
+                android:id="@+id/button_wrapper"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_below="@+id/editText_height"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/button_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:padding="10dp"
+                    android:background="@color/colorSecondary"
+                    android:fontFamily="@font/wendy_one"
+                    android:textColor="#FFF"
+                    android:textSize="20sp"
+                    android:textAllCaps="false"
+                    android:onClick="runSearch"
+                    android:text="Search pet breeds!" />
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <!--Fragment placeholder for the RecyclerView that holds the list of breeds-->
         <FrameLayout
@@ -107,7 +147,6 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true">
         </FrameLayout>
-
 
     </RelativeLayout>
 
