--- a/app/src/main/res/layout/fragment_breeddetail.xml
+++ b/app/src/main/res/layout/fragment_breeddetail.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#FFF"
     >
 
@@ -12,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical"
-        android:gravity="center"
-        android:background="#FFF">
+        android:gravity="center">
 
         <ProgressBar
             android:id="@+id/layout_imageLoadingPanel_icon"
@@ -34,21 +34,21 @@
     <ImageView
         android:id="@+id/imageView_breedImage"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginBottom="20dp"
+        android:layout_height="0dp"
+        android:background="#FFF"
         />
 
     <!--The breed name-->
     <TextView
         android:id="@+id/textView_breedDetailTitle"
-        android:layout_below="@+id/imageView_breedImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="28sp"
-        android:textColor="@color/colorPrimary"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        />
+        android:layout_below="@+id/imageView_breedImage"
+        android:fontFamily="@font/amatic_sc_bold"
+        android:padding="15dp"
+        android:background="@color/colorAccent"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="36sp" />
 
     <!--The breed details-->
     <LinearLayout
@@ -70,19 +70,19 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             >
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
                 android:paddingBottom="5dp"
                 android:text="Origin"
-                />
+                android:textSize="14sp" />
             <TextView
                 android:id="@+id/textView_breedOrigin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryText"
                 />
         </LinearLayout>
         <LinearLayout
@@ -93,19 +93,19 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             >
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
                 android:paddingBottom="5dp"
                 android:text="Weight"
-                />
+                android:textSize="14sp" />
             <TextView
                 android:id="@+id/textView_breedWeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryText"
                 />
         </LinearLayout>
         <LinearLayout
@@ -116,19 +116,19 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             >
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
                 android:paddingBottom="5dp"
                 android:text="Lifespan"
-                />
+                android:textSize="14sp" />
             <TextView
                 android:id="@+id/textView_breedLifespan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryText"
                 />
         </LinearLayout>
     </LinearLayout>
@@ -146,6 +146,7 @@
         android:textColor="#999"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
+        android:layout_gravity="bottom"
         />
 
-</RelativeLayout>
+</LinearLayout>
