--- a/app/src/main/res/layout/listitem_breed.xml
+++ b/app/src/main/res/layout/listitem_breed.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryText"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:paddingStart="20dp"
