--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
                 android:layout_marginEnd="15dp"
                 android:text="Approx. weight (kg)" />
 
-            <!-- The weight -->
+            <!-- The weight input -->
             <EditText
                 android:id="@+id/editText_weight"
                 android:layout_width="match_parent"
@@ -86,7 +86,6 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="30dp"/>
 
-
             <!-- The label for the height field -->
             <TextView
                 android:id="@+id/textView_heightLabel"
@@ -96,9 +95,9 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:text="Approx. height (cm)" />
+                android:text="Approx. height (cm) - doggies only" />
 
-            <!-- The weight -->
+            <!-- The height input -->
             <EditText
                 android:id="@+id/editText_height"
                 android:layout_width="match_parent"
