--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,15 +41,26 @@
             android:background="#FFF"
             >
 
+            <!--Note. Remove this when empty fields are allowed for.
+                See BreedListFragment.java-->
+            <TextView
+                android:id="@+id/textview_instructions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textFontWeight="700"
+                android:text="Please fill in all fields"/>
+
             <!-- The label for the species selection -->
             <TextView
                 android:id="@+id/textView_speciesLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
+                android:layout_below="@id/textview_instructions"
                 android:text="Species" />
             <!-- The species selection -->
             <Spinner
