--- a/app/src/main/res/layout/fragment_breeddetail.xml
+++ b/app/src/main/res/layout/fragment_breeddetail.xml
@@ -70,7 +70,6 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             >
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -93,7 +92,6 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             >
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -116,7 +114,6 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             >
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -125,6 +122,28 @@
                 android:textSize="14sp" />
             <TextView
                 android:id="@+id/textView_breedLifespan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@color/colorPrimaryText"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:text="Temperament"
+                android:textSize="14sp" />
+            <TextView
+                android:id="@+id/textView_temperament"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
