Process "bred for" and "breed group" fields for dogs; show those and height in detail fragment; put details in a ScrollView

--- a/app/src/main/res/layout/fragment_breeddetail.xml
+++ b/app/src/main/res/layout/fragment_breeddetail.xml
@@ -50,126 +50,207 @@
         android:textColor="@color/colorPrimaryText"
         android:textSize="36sp" />
 
-    <!--The breed details-->
-    <LinearLayout
-        android:id="@+id/layout_DetailWrapper"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/textView_breedDetailTitle"
-        android:layout_marginTop="10dp"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        >
-        <LinearLayout
-            android:id="@+id/LinearLayout_breedOriginWrapper"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:text="Origin"
-                android:textSize="14sp" />
-            <TextView
-                android:id="@+id/textView_breedOrigin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="@color/colorPrimaryText"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:text="Weight"
-                android:textSize="14sp" />
-            <TextView
-                android:id="@+id/textView_breedWeight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="@color/colorPrimaryText"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:text="Lifespan"
-                android:textSize="14sp" />
-            <TextView
-                android:id="@+id/textView_breedLifespan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="@color/colorPrimaryText"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:text="Temperament"
-                android:textSize="14sp" />
-            <TextView
-                android:id="@+id/textView_temperament"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="@color/colorPrimaryText"
-                />
-        </LinearLayout>
-    </LinearLayout>
+        android:layout_height="wrap_content">
 
-
-    <!--The API credit-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="bottom">
-        <TextView
-            android:id="@+id/textView_credit"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="15dp"
-            android:paddingTop="30dp"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:textSize="12sp"
-            android:textColor="#999"
-            />
-    </LinearLayout>
+            android:layout_height="wrap_content">
+
+                <!--The breed details-->
+                <LinearLayout
+                    android:id="@+id/layout_DetailWrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_below="@+id/textView_breedDetailTitle"
+                    android:layout_marginTop="10dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp">
+                    <LinearLayout
+                        android:id="@+id/LinearLayout_breedOriginWrapper"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:text="Origin"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView_breedOrigin"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorPrimaryText"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/LinearLayout_breedGroupWrapper"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:text="Breed Group"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView_breedGroup"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorPrimaryText"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/LinearLayout_bredForWrapper"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:text="Bred for"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView_bredFor"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorPrimaryText"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:text="Weight"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView_breedWeight"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorPrimaryText"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/LinearLayout_breedHeightWrapper"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:text="Height"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView_breedHeight"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorPrimaryText"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:text="Lifespan"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView_breedLifespan"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorPrimaryText"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="5dp"
+                            android:text="Temperament"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView_temperament"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="@color/colorPrimaryText"
+                            />
+                    </LinearLayout>
+                </LinearLayout>
+
+            <!--The API credit-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginTop="20dp"
+                android:gravity="bottom">
+                <TextView
+                    android:id="@+id/textView_credit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="30dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:textSize="12sp"
+                    android:textColor="#999"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
